# Gears

./: .env.example  Cargo.toml  README.md  classnotes.md
migrations/2017-09-11-111954_create_user_table/: up.sql
migrations/2017-09-25-185543_create_projects/: up.sql
migrations/2017-10-23-130446_generate_project_users/: down.sql  up.sql
migrations/2017-10-25-145527_generate_issues/: up.sql
migrations/2017-10-25-150814_generate_posts/: down.sql  up.sql
src/: main.rs
src/controllers/: authentication_controller.rs  issue_controller.rs  mod.rs  post_controller.rs  project_controller.rs  static_controller.rs
src/helpers/: error.rs  mod.rs
src/middleware/: authentication.rs  csrf.rs  mod.rs  sessions.rs
src/models/: mod.rs  project.rs  user.rs
src/models/database/: mod.rs
src/models/project/: issue.rs  mod.rs  post.rs  user_to_project.rs
src/models/projects/: issues.rs  mod.rs
src/routes/: mod.rs  notfound.rs
src/static/: main.css  search.js  toggle.js  toggle.min.js
src/templating/: helpers.rs  mod.rs
src/views/: 404.hbs  index.hbs  projects.hbs  template.hbs
src/views/posts/: new.hbs
src/views/projects/: issues.hbs  posts.hbs  project.hbs  search.hbs
